Prevent cows from causing scrollbars to appear

--- a/src/components/CowPen/CowPen.sass
+++ b/src/components/CowPen/CowPen.sass
@@ -1,6 +1,7 @@
 @import ../../styles/variables.sass
 
 .CowPen
+  overflow: hidden
 
   &:hover
     cursor: pointer
